--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ This is a Java applet version of the game Mancala.<br>
 <br>
 <br>
 I used this to host the domain: <a href="http://freedns.afraid.org/">Free DNS</a><br>
-The files are hosted on dropbox.
+The files are hosted on <a href="http://github.com/">github</a>.
 </body>
 </html>
