--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@ This is a site where I put links to stuff I have made.
 <h2>
 <a href="./Mancala.html">Mancala</a>
 </h2>
-This is a Java applet version of the game Mancala.<br>
+This is a Java applet version of the game Mancala.
+<h2>Fractal stuff</h2>
+<a href="http://www.youtube.com/watch?v=5GoJXmpj51s">Fractal zooming video</a><br>
+<a href="http://dl.dropbox.com/u/66179671/fractals/desktop2.png">Fractal images</a><br>
 <br>
-<br>
-<br>
+<a href="https://dl.dropbox.com/u/66179671/FractalGen.zip">Fractal Generator Program</a><br>
+<a href="./FractalGenInstructions.html">Fractal Generator Instructions</a>
+<h2>Other info</h2>
 I used this to host the domain: <a href="http://freedns.afraid.org/">Free DNS</a><br>
 The files are hosted on <a href="http://github.com/">GitHub</a>.
 </body>
