--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ This is a site where I put links to stuff I have made.
 This is a Java applet version of the game Mancala.
 <h2>Fractal stuff</h2>
 <a href="http://www.youtube.com/watch?v=5GoJXmpj51s">Fractal zooming video</a><br>
-<a href="http://dl.dropbox.com/u/66179671/fractals/desktop2.png">Fractal images</a><br>
+<a href="./Gallery.html">Fractal images</a><br>
 <br>
 <a href="https://dl.dropbox.com/u/66179671/FractalGen.zip">Fractal Generator Program</a><br>
 <a href="./FractalGenInstructions.html">Fractal Generator Instructions</a>
