--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ This is a Java applet version of the game Mancala.
 <a href="http://www.youtube.com/watch?v=5GoJXmpj51s">Fractal zooming video</a><br>
 <a href="./Gallery.html">Fractal images</a><br>
 <br>
-<a href="https://dl.dropbox.com/u/66179671/FractalGen.zip">Fractal Generator Program</a><br>
+<a href="https://github.com/downloads/Kramin42/kramin42.github.com/FractalGen.zip">Fractal Generator Program</a><br>
 <a href="./FractalGenInstructions.html">Fractal Generator Instructions</a>
 <h2>Other info</h2>
 I used this to host the domain: <a href="http://freedns.afraid.org/">Free DNS</a><br>
