Added more images to the gallery

--- a/Gallery.html
+++ b/Gallery.html
@@ -73,6 +73,12 @@ div.desc
   </a>
   <div class="desc">size: 1920x1080</div>
 </div>
+<div class="img"><a target="_blank" href="./fractals/fractal1.htm"><img src="./fractals/fractal1_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal2.htm"><img src="./fractals/fractal2_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal3.htm"><img src="./fractals/fractal3_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal4.htm"><img src="./fractals/fractal4_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal5.htm"><img src="./fractals/fractal5_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal6.htm"><img src="./fractals/fractal6_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
 
 </body>
 </html>
