Updated index.html and FractalGenInstructions.html
made links in index.html open a new tab.

added more to the other info section of FractalGenInstructions.

--- a/FractalGenInstructions.html
+++ b/FractalGenInstructions.html
@@ -30,7 +30,10 @@ Save and close "Render_Fractal.bat" then run it by double clicking it. When the 
 You can view a saved fractal by doing a similar thing as described above but with the "View_Fractal.bat" file (don't put in image width and height command-line arguments because the width and height of the viewer are fixed).<br>
 I usually make my images 2 or 4 times larger than what I want my final image to be (e.g. 7680 by 4320 for a 1920 by 1080 image) and use GIMP to reduce the image's size to the size I want. This makes the image look less pixelated.<br>
 <br>
-If you find any bugs or have any questions, email me at kramin42[at]gmail[dot]com.
+If you find any bugs or have any questions, email me at kramin42[at]gmail[dot]com.<br>
+<br>
+This program is for Windows, but if you want a Mac or Linux version then email me (I kinda want to get it to work on a Mac anyway).<br>
+Also, if you want the source code then feel free to email me (although it's not very organised).
 <h2>Command-Line Arguments</h2>
 Type "int" means it must be an integer value (e.g. 6).<br>
 Type "double" means it must be a decimal value (e.g. 6.5432).<br>
