--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@ Welcome!
 This is a site where I put links to stuff I have made.
 
 <h2>
-<a href="./Mancala.html">Mancala</a>
+<a href="./Mancala.html" target="_blank">Mancala</a>
 </h2>
 This is a Java applet version of the game Mancala.
 <h2>Fractal stuff</h2>
-<a href="http://www.youtube.com/watch?v=5GoJXmpj51s">Fractal zooming video</a><br>
-<a href="./Gallery.html">Fractal images</a><br>
+<a href="http://www.youtube.com/watch?v=5GoJXmpj51s" target="_blank">Fractal zooming video</a><br>
+<a href="./Gallery.html" target="_blank">Fractal images</a><br>
 <br>
-<a href="https://github.com/downloads/Kramin42/kramin42.github.com/FractalGen.zip">Fractal Generator Program</a><br>
-<a href="./FractalGenInstructions.html">Fractal Generator Instructions</a>
+<a href="https://github.com/downloads/Kramin42/kramin42.github.com/FractalGen.zip" target="_blank">Fractal Generator Program</a><br>
+<a href="./FractalGenInstructions.html" target="_blank">Fractal Generator Instructions</a>
 <h2>Other info</h2>
-I used this to host the domain: <a href="http://freedns.afraid.org/">Free DNS</a><br>
-The files are hosted on <a href="http://github.com/">GitHub</a>.
+I used this to host the domain: <a href="http://freedns.afraid.org/" target="_blank">Free DNS</a><br>
+The files are hosted on <a href="http://github.com/" target="_blank">GitHub</a>.
 </body>
 </html>
