--- a/Gallery.html
+++ b/Gallery.html
@@ -79,6 +79,13 @@ div.desc
 <div class="img"><a target="_blank" href="./fractals/fractal4.htm"><img src="./fractals/fractal4_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal5.htm"><img src="./fractals/fractal5_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal6.htm"><img src="./fractals/fractal6_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal7.htm"><img src="./fractals/fractal7_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal8.htm"><img src="./fractals/fractal8_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal9.htm"><img src="./fractals/fractal9_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal10.htm"><img src="./fractals/fractal10_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal11.htm"><img src="./fractals/fractal11_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal12.htm"><img src="./fractals/fractal12_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal13.htm"><img src="./fractals/fractal13_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
 
 </body>
 </html>
