Added more fractal images

--- a/Gallery.html
+++ b/Gallery.html
@@ -86,6 +86,10 @@ div.desc
 <div class="img"><a target="_blank" href="./fractals/fractal11.htm"><img src="./fractals/fractal11_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal12.htm"><img src="./fractals/fractal12_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal13.htm"><img src="./fractals/fractal13_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal14.htm"><img src="./fractals/fractal14_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal15.htm"><img src="./fractals/fractal15_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal16.htm"><img src="./fractals/fractal16_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal17.htm"><img src="./fractals/fractal17_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
 
 </body>
 </html>
