Added 2 more fractal images

--- a/Gallery.html
+++ b/Gallery.html
@@ -90,6 +90,8 @@ div.desc
 <div class="img"><a target="_blank" href="./fractals/fractal15.htm"><img src="./fractals/fractal15_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal16.htm"><img src="./fractals/fractal16_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal17.htm"><img src="./fractals/fractal17_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal18.htm"><img src="./fractals/fractal18_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal19.htm"><img src="./fractals/fractal19_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
 
 </body>
 </html>
