--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@ This is a site where I put links to stuff I have made.
 This is a Java applet version of the game Mancala.
 <h2>Fractal stuff</h2>
 <a href="http://www.youtube.com/watch?v=1ggnjzikByg" target="_blank">Fractal zooming video</a><br>
-<a href="./Gallery.html" target="_blank">Fractal images</a><br>
+<a href="./Gallery.html" target="_blank">Fractal image gallery</a><br>
 <br>
-<a href="https://github.com/downloads/Kramin42/kramin42.github.com/FractalGen.zip" target="_blank">Fractal Generator Program</a><br>
+<a href="./FractalGen.zip" target="_blank">Fractal Generator Program</a><br>
 <a href="./FractalGenInstructions.html" target="_blank">Fractal Generator Instructions</a>
 <h2>Other info</h2>
-I used this to host the domain: <a href="http://freedns.afraid.org/" target="_blank">Free DNS</a><br>
-The files are hosted on <a href="http://github.com/" target="_blank">GitHub</a>.
+I used this to host the domain: <a href="http://freedns.afraid.org/" target="_blank">Free DNS</a>.<br>
+The files are hosted on <a href="http://github.com/" target="_blank">GitHub</a>.<br>
+<br>
+My email: kramin42(at)gmail(dot)com.<br>
+Alternate link to this site: <a href="http://kramin42.github.com/" target="_blank">kramin42.github.com</a>.<br>
+The GitHub repository of this website is <a href="https://github.com/Kramin42/kramin42.github.com">here</a>.
 </body>
 </html>
