--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@ This is a Java applet version of the game Mancala.
 <br>
 <a href="./FractalGen.zip" target="_blank">Fractal Generator Program</a><br>
 <a href="./FractalGenInstructions.html" target="_blank">Fractal Generator Instructions</a>
+<h2>Music</h2>
+Created using <a href="http://www.drpetter.se/project_musagi.html" target="_blank">Musagi</a>:<br>
+<a href="./Music/AxelF.mp3" target="_blank">Axel F</a><br>
 <h2>Other info</h2>
 I used this to host the domain: <a href="http://freedns.afraid.org/" target="_blank">Free DNS</a>.<br>
 The files are hosted on <a href="http://github.com/" target="_blank">GitHub</a>.<br>
 <br>
 My email: kramin42(at)gmail(dot)com.<br>
 Alternate link to this site: <a href="http://kramin42.github.com/" target="_blank">kramin42.github.com</a>.<br>
-The GitHub repository of this website is <a href="https://github.com/Kramin42/kramin42.github.com">here</a>.
+The GitHub repository of this website is <a href="https://github.com/Kramin42/kramin42.github.com" target="_blank">here</a>.
 </body>
 </html>
