updated music stuff

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ This is a Java applet version of the game Mancala.
 <a href="./FractalGenInstructions.html" target="_blank">Fractal Generator Instructions</a>
 <h2>Music</h2>
 Created using <a href="http://www.drpetter.se/project_musagi.html" target="_blank">Musagi</a>:<br>
-<a href="./Music/AxelF.mp3" target="_blank">Axel F</a><br>
+<a href="./Music/AxelF.htm" target="_blank">Axel F</a><br>
 <h2>Other info</h2>
 I used this to host the domain: <a href="http://freedns.afraid.org/" target="_blank">Free DNS</a>.<br>
 The files are hosted on <a href="http://github.com/" target="_blank">GitHub</a>.<br>
