updated Mancala (added AI vs AI and 2 player)

--- a/Mancala.html
+++ b/Mancala.html
@@ -20,15 +20,16 @@ If the last ball lands in an empty pot on your side then you capture the balls i
 <h3>
 How to use this game
 </h3>
-First select a difficulty by clicking one of the buttons in the upper left the click Start Game. If you have finished a game you must click the new game button before you can select a new difficulty.
+First select a difficulty by clicking one of the buttons in the upper left then click Start Game. If you have finished a game you must click the new game button before you can select a new difficulty.
 <br>
-Note: The difficulty cannot be changed once the game has started.
+Note: The difficulty cannot be changed once the game has started.<br>
 <br>
-To end the current game press the resign button.
-<br><br>
-If your framerate is low (the FPS meter in the lower left is lower than 60) then try turning AntiAliasing off.
+Update: You can now make the computer play itself by choosing the "AI vs AI" option. You can also play against someone else (on the same computer) using the "2 player" option.<br>
 <br>
+To end the current game press the resign button.<br>
 <br>
-Thanks for playing, have fun!
+If your framerate is low (the FPS meter in the lower left is lower than 60) then try turning AntiAliasing off.<br>
+<br>
+Thanks for playing, have fun!<br>
 </body>
 </html>
