added more images and updated FractalGen

--- a/Fractal Generator dist/README.html
+++ b/Fractal Generator dist/README.html
@@ -2,7 +2,7 @@
 <body>
 <h1>Fractal Generator Instructions</h1>
 <h2>Finding a fractal</h2>
-First use SDL_Fractal.exe to find a nice looking fractal. To zoom in click the point you want to zoom in on and drag the mouse to the lower right, then release the mouse button.
+First use Fractal_viewer.exe to find a nice looking fractal. To zoom in click the point you want to zoom in on and drag the mouse to the lower right, then release the mouse button.
 If you want to cancel a zoom after clicking but before releasing then drag the mouse to the upper left and release the button; It will only zoom in if the point where you release the mouse is below and to the right of the point where you clicked it.
 If you need to zoom out then press the "z" key and it will zoom out by a factor of 2.
 <br>
