--- a/Gallery.html
+++ b/Gallery.html
@@ -91,6 +91,9 @@ div.desc
 <div class="img"><a target="_blank" href="./fractals/fractal17.htm"><img src="./fractals/fractal17_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal18.htm"><img src="./fractals/fractal18_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal19.htm"><img src="./fractals/fractal19_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal20.htm"><img src="./fractals/fractal20_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal21.htm"><img src="./fractals/fractal21_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
+<div class="img"><a target="_blank" href="./fractals/fractal22.htm"><img src="./fractals/fractal22_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
 
 </body>
 </html>
