--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ This is a Java applet version of the game Mancala.
 <a href="http://www.youtube.com/watch?v=1ggnjzikByg" target="_blank">Fractal zooming video</a><br>
 <a href="./Gallery.html" target="_blank">Fractal image gallery</a><br>
 <br>
-<a href="https://github.com/downloads/Kramin42/kramin42.github.com/FractalGen.zip" target="_blank">Fractal Generator Program</a><br>
+<a href="./FractalGen.zip" target="_blank">Fractal Generator Program</a><br>
 <a href="./FractalGenInstructions.html" target="_blank">Fractal Generator Instructions</a>
 <h2>Music</h2>
 Created using <a href="http://www.drpetter.se/project_musagi.html" target="_blank">Musagi</a>:<br>
