--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ This is a site where I put links to stuff I have made.
 </h2>
 This is a Java applet version of the game Mancala.
 <h2>Fractal stuff</h2>
-<a href="http://www.youtube.com/watch?v=1ggnjzikByg" target="_blank">Fractal zooming video</a><br>
+<a href="http://www.youtube.com/watch?v=WA3Zhlx5FPw" target="_blank">Fractal zooming video</a><br>
 <a href="./Gallery.html" target="_blank">Fractal image gallery</a><br>
 <br>
 <a href="./FractalGen.zip" target="_blank">Fractal Generator Program</a><br>
