--- a/Gallery.html
+++ b/Gallery.html
@@ -34,43 +34,43 @@ div.desc
   <a target="_blank" href="./fractals/desktop1_big.htm">
   <img src="./fractals/desktop1_small.png" alt="1080p" width="110" height="90" />
   </a>
-  <div class="desc">size: 1920x1080</div>
+  <div class="desc">size: 1080p</div>
 </div>
 <div class="img">
   <a target="_blank" href="./fractals/desktop2_big.htm">
   <img src="./fractals/desktop2_small.png" alt="1080p" width="110" height="90" />
   </a>
-  <div class="desc">size: 1920x1080</div>
+  <div class="desc">size: 1080p</div>
 </div>
 <div class="img">
   <a target="_blank" href="./fractals/desktop3_big.htm">
   <img src="./fractals/desktop3_small.png" alt="1080p" width="110" height="90" />
   </a>
-  <div class="desc">size: 1920x1080</div>
+  <div class="desc">size: 1080p</div>
 </div>
 <div class="img">
   <a target="_blank" href="./fractals/desktop4_big.htm">
   <img src="./fractals/desktop4_small.png" alt="1080p" width="110" height="90" />
   </a>
-  <div class="desc">size: 1920x1080</div>
+  <div class="desc">size: 1080p</div>
 </div>
 <div class="img">
   <a target="_blank" href="./fractals/desktop5_big.htm">
   <img src="./fractals/desktop5_small.png" alt="1080p" width="110" height="90" />
   </a>
-  <div class="desc">size: 1920x1080</div>
+  <div class="desc">size: 1080p</div>
 </div>
 <div class="img">
   <a target="_blank" href="./fractals/desktop6_big.htm">
   <img src="./fractals/desktop6_small.png" alt="1080p" width="110" height="90" />
   </a>
-  <div class="desc">size: 1920x1080</div>
+  <div class="desc">size: 1080p</div>
 </div>
 <div class="img">
   <a target="_blank" href="./fractals/desktop7_big.htm">
   <img src="./fractals/desktop7_small.png" alt="1080p" width="110" height="90" />
   </a>
-  <div class="desc">size: 1920x1080</div>
+  <div class="desc">size: 1080p</div>
 </div>
 <div class="img"><a target="_blank" href="./fractals/fractal1.htm"><img src="./fractals/fractal1_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal2.htm"><img src="./fractals/fractal2_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
