test to make images line up properly in IE

--- a/Gallery.html
+++ b/Gallery.html
@@ -66,12 +66,7 @@ div.desc
   </a>
   <div class="desc">size: 1080p</div>
 </div>
-<div class="img">
-  <a target="_blank" href="./fractals/desktop7_big.htm">
-  <img src="./fractals/desktop7_small.png" alt="1080p" width="110" height="90" />
-  </a>
-  <div class="desc">size: 1080p</div>
-</div>
+<div class="img"><a target="_blank" href="./fractals/desktop7_big.htm"><img src="./fractals/desktop7_small.png" alt="1080p" width="110" height="90" /></a><div class="desc">size: 1080p</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal1.htm"><img src="./fractals/fractal1_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal2.htm"><img src="./fractals/fractal2_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
 <div class="img"><a target="_blank" href="./fractals/fractal3.htm"><img src="./fractals/fractal3_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
