centered the applets

--- a/Mancala.html
+++ b/Mancala.html
@@ -1,9 +1,10 @@
 <html>
 <body>
+<P ALIGN=center>
 <applet code="g.class"
 	  archive="./M4nkala.jar"
         width="1200" height="800">
-</applet><br>
+</applet></P><br>
 <h1>
 Instructions
 </h1>
