--- a/TDapplet.htm
+++ b/TDapplet.htm
@@ -1,3 +1,6 @@
+<html>
+<body bgcolor="#000000">
+<P ALIGN=center>
 <!--[if !IE]>-->
     <object classid="java:game.class" 
             type="application/x-java-applet"
@@ -13,3 +16,6 @@
 <!--[if !IE]>-->
     </object>
 <!--<![endif]-->
+</P>
+</body>
+</html>
