--- a/TDapplet.htm
+++ b/TDapplet.htm
@@ -4,7 +4,7 @@
 <!--[if !IE]>-->
     <object classid="java:game.class" 
             type="application/x-java-applet"
-            archive="Sample2.jar" 
+            archive="TDapplet.jar" 
             height="600" width="800" >
         <!-- Konqueror browser needs the following param -->
         <param name="archive" value="TDapplet.jar" />
