--- a/index.htm
+++ b/index.htm
@@ -6,17 +6,17 @@ Welcome!
 This is a site where I put links to stuff I have made.
 
 <h2>
-<a href="./Mancala.html" target="_blank">Mancala</a>
+<a href="./Mancala.htm" target="_blank">Mancala</a>
 </h2>
 This is a Java applet version of the game Mancala.
 <h2>Fractal stuff</h2>
 <a href="http://www.youtube.com/watch?v=WA3Zhlx5FPw" target="_blank">Fractal zooming video</a><br>
-<a href="./Gallery.html" target="_blank">Fractal image gallery</a><br>
+<a href="./Gallery.htm" target="_blank">Fractal image gallery</a><br>
 <br>
 <a href="./FractalGen.zip" target="_blank">Fractal Generator Program</a><br>
-<a href="./FractalGenInstructions.html" target="_blank">Fractal Generator Instructions</a>
+<a href="./FractalGenInstructions.htm" target="_blank">Fractal Generator Instructions</a>
 <h2>Music</h2>
-Created using <a href="http://www.drpetter.se/project_musagi.html" target="_blank">Musagi</a>:<br>
+Created using <a href="http://www.drpetter.se/project_musagi.htm" target="_blank">Musagi</a>:<br>
 <a href="./music/AxelF.mp3" target="_blank">Axel F</a><br>
 <h2>Other info</h2>
 This website is hosted on <a href="http://github.com/" target="_blank">GitHub</a>.<br>
