--- a/Mancala.htm
+++ b/Mancala.htm
@@ -1,47 +1,20 @@
 <html>
-<body>
+<body bgcolor="#000000">
 <P ALIGN=center>
 <!--[if !IE]>-->
     <object classid="java:g.class" 
             type="application/x-java-applet"
             archive="./M4nkala.jar" 
-            height="800" width="1200" >
+            height="600" width="800" >
         <!-- Konqueror browser needs the following param -->
         <param name="archive" value="./M4nkala.jar" />
 <!--<![endif]-->
-        <object classid="clsid:8AD9C840-044E-11D1-B3E9-00805F499D93" height="800" width="1200" > 
+        <object classid="clsid:8AD9C840-044E-11D1-B3E9-00805F499D93" height="600" width="800" > 
             <param name="code" value="g" />
 		    <param name="archive" value="./M4nkala.jar" />
         </object> 
 <!--[if !IE]>-->
     </object>
 <!--<![endif]-->
-<h1>
-Instructions
-</h1>
-<h3>
-The rules of Mancala
-</h3>
-The aim of mancala is to get as many balls as possible into your main "pot" (you are blue and your main pot is the one with the big blue 0 in it at the start).<br>
-When it is your turn you may click on one of your smaller pots to send all of the balls in that pot to the subsequent pots in the counterclockwise direction.<br>
-The balls will be distributed so that one ball goes to each subsequent pot until the balls run out.<br>
-<br>
-If the last ball lands in your main pot then you get an extra turn.<br>
-<br>
-If the last ball lands in an empty pot on your side then you capture the balls in the corresponding pot on the enemy's side.
-<h3>
-How to use this game
-</h3>
-First select a difficulty by clicking one of the buttons in the upper left then click Start Game. If you have finished a game you must click the new game button before you can select a new difficulty.
-<br>
-Note: The difficulty cannot be changed once the game has started.<br>
-<br>
-Update: You can now make the computer play itself by choosing the "AI vs AI" option. You can also play against someone else (on the same computer) using the "2 player" option.<br>
-<br>
-To end the current game press the resign button.<br>
-<br>
-If your framerate is low (the FPS meter in the lower left is lower than 60) then try turning AntiAliasing off.<br>
-<br>
-Thanks for playing, have fun!<br>
-</body>
-</html>
+<body>
+<html>
