--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@ This is a site where I put links to stuff I have made.
 <h2>
 <a href="./Mancala.htm" target="_blank">Mancala</a>
 </h2>
-This is a Java applet version of the game Mancala.
+This is a Java applet version of the game Mancala. Read the rules/instructions <a href="./MancalaInstructions.htm" target="_blank">here</a>.
 <h2>Fractal stuff</h2>
 <a href="http://www.youtube.com/watch?v=WA3Zhlx5FPw" target="_blank">Fractal zooming video</a><br>
 <a href="./Gallery.htm" target="_blank">Fractal image gallery</a><br>
