--- a/index.htm
+++ b/index.htm
@@ -6,11 +6,15 @@ Welcome!
 This is a site where I put links to stuff I have made.
 
 <h2>
-<a href="./Mancala.htm" target="_blank">Mancala</a>
+<a href="./Mancala.htm" target="_blank">M4nkala</a>
 </h2>
-This is a Java applet version of the game Mancala.<br>
+This is a Java applet version of the game Mancala created for the <a href="http://www.java4k.com">java4k</a> 2013 contest.<br>
 <a href="./MancalaInstructions.htm" target="_blank">Instructions</a><br>
 <a href="./oldMancala.htm" target="_blank">older version</a>
+<h2>
+<a href="./CodeGolf4k.htm" target="_blank">CodeGolf4k (beta)</a>
+</h2>
+This is another game I'm creating for the <a href="http://www.java4k.com">java4k</a> 2013 contest.
 <h2>Fractal stuff</h2>
 <a href="http://www.youtube.com/watch?v=WA3Zhlx5FPw" target="_blank">Fractal zooming video</a><br>
 <a href="./Gallery.htm" target="_blank">Fractal image gallery</a><br>
