--- a/CodeGolf4k.htm
+++ b/CodeGolf4k.htm
@@ -4,14 +4,14 @@
 <!--[if !IE]>-->
     <object classid="java:g.class" 
             type="application/x-java-applet"
-            archive="./CodeGolf4kbeta.jar" 
+            archive="./CodeGolf4k.jar" 
             height="600" width="800" >
         <!-- Konqueror browser needs the following param -->
-        <param name="archive" value="./CodeGolf4kbeta.jar" />
+        <param name="archive" value="./CodeGolf4k.jar" />
 <!--<![endif]-->
         <object classid="clsid:8AD9C840-044E-11D1-B3E9-00805F499D93" height="600" width="800" > 
             <param name="code" value="g" />
-		    <param name="archive" value="./CodeGolf4kbeta.jar" />
+		    <param name="archive" value="./CodeGolf4k.jar" />
         </object> 
 <!--[if !IE]>-->
     </object>
