--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@ This is a Java applet version of the game Mancala created for the <a href="http:
 <a href="./MancalaInstructions.htm" target="_blank">Instructions</a><br>
 <a href="./oldMancala.htm" target="_blank">older version</a>
 <h2>
-<a href="./CodeGolf4k.htm" target="_blank">CodeGolf4k (beta)</a>
+<a href="./CodeGolf4k.htm" target="_blank">CodeGolf4k</a>
 </h2>
 This is another game I'm creating for the <a href="http://www.java4k.com" target="_blank">java4k</a> 2013 contest.
 <a href="http://www.java-gaming.org/topics/wip-codegolf4k/27766/view.html" target="_blank">Instructions and info.</a>
