minor changes to CG4k.htm and CG4kNew.htm

--- a/CodeGolf4kNew.htm
+++ b/CodeGolf4kNew.htm
@@ -4,5 +4,6 @@
 <applet code="g.class" archive="g.progrd.java6.kz.pack.gz" width="800" height="600">
 <param name="java_arguments" value="-Djnlp.packEnabled=true" />
 </applet>
-<body>
-<html>
+</P>
+</body>
+</html>
