--- a/CodeGolf4kNew.htm
+++ b/CodeGolf4kNew.htm
@@ -1,9 +1,10 @@
 <html>
 <body bgcolor="#000000">
 <P ALIGN=center>
-<applet code="g.class" archive="g.progrd.java6.kz.pack.gz" width="800" height="600">
-<param name="java_arguments" value="-Djnlp.packEnabled=true" />
-</applet>
+<APPLET CODE="g.class" WIDTH=800 HEIGHT=600>
+    <PARAM NAME  = "cache_archive" VALUE = "g.jar"/>
+    <PARAM NAME="java_arguments" VALUE="-Djnlp.packEnabled=true"/>
+</APPLET>
 </P>
 </body>
 </html>
