--- a/CodeGolf4k.htm
+++ b/CodeGolf4k.htm
@@ -1,21 +1,10 @@
 <html>
 <body bgcolor="#000000">
 <P ALIGN=center>
-<!--[if !IE]>-->
-    <object classid="java:g.class" 
-            type="application/x-java-applet"
-            archive="./CodeGolf4kbeta2.jar" 
-            height="600" width="800" >
-        <!-- Konqueror browser needs the following param -->
-        <param name="archive" value="./CodeGolf4kbeta2.jar" />
-<!--<![endif]-->
-        <object classid="clsid:8AD9C840-044E-11D1-B3E9-00805F499D93" height="600" width="800" > 
-            <param name="code" value="g" />
-		    <param name="archive" value="./CodeGolf4kbeta2.jar" />
-        </object> 
-<!--[if !IE]>-->
-    </object>
-<!--<![endif]-->
+<APPLET CODE="g.class" WIDTH=800 HEIGHT=600>
+    <PARAM NAME  = "cache_archive" VALUE = "g.jar"/>
+    <PARAM NAME="java_arguments" VALUE="-Djnlp.packEnabled=true"/>
+</APPLET>
 </P>
 </body>
 </html>
