--- a/M4nkala.htm
+++ b/M4nkala.htm
@@ -5,7 +5,7 @@
    <tr><td>
 		<P ALIGN=center>
 		<APPLET CODE="g.class" WIDTH=800 HEIGHT=600>
-			<PARAM NAME  = "cache_archive" VALUE = "CodeGolf4k/g.jar"/>
+			<PARAM NAME  = "cache_archive" VALUE = "M4nkala/g.jar"/>
 			<PARAM NAME="java_arguments" VALUE="-Djnlp.packEnabled=true"/>
 		</APPLET>
 		</P>
