--- a/index.htm
+++ b/index.htm
@@ -6,11 +6,12 @@ Welcome!
 This is a site where I put links to stuff I have made.
 
 <h2>
-<a href="./M4nkala.htm" target="_blank">M4nkala</a>
+<a href="http://www.java4k.com/index.php?action=games&method=view&gid=428" target="_blank">M4nkala</a>
 </h2>
 This is a Java applet version of the game Mancala created for the <a href="http://www.java4k.com" target="_blank">java4k</a> 2013 contest.<br>
 <a href="./M4nkala/Instructions.htm" target="_blank">Instructions</a><br>
-<a href="./oldMancala.htm" target="_blank">older version</a>
+<a href="./M4nkala.htm" target="_blank">M4nkala hosted on this website</a><br>
+<a href="./oldMancala.htm" target="_blank">old version</a>
 <h2>
 <a href="./CodeGolf4k.htm" target="_blank">CodeGolf4k</a>
 </h2>
