--- a/test.htm
+++ b/test.htm
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor="#000000">
+<body bgcolor="#101010">
 <div>
    <table width="100%" height="100%" align="center" valign="center">
    <tr><td>
@@ -7,9 +7,11 @@
 		<APPLET CODE="g.class" WIDTH=800 HEIGHT=600>
 			<PARAM NAME  = "cache_archive" VALUE = "test.jar"/>
 		</APPLET>
+		<br>
+		<font color="White">Left click to fire your rocket engines, 'r' to reset.<br>Try to get into orbit around the Moon and then back around the Earth.<br>You must remain in orbit for 10 seconds for each and you have 10 seconds worth of fuel.</font>
 		</P>
    </td></tr>
    </table>
-</div>
+</div> 
 </body>
 </html>
