--- a/10_seconds_of_thrust.htm
+++ b/10_seconds_of_thrust.htm
@@ -5,7 +5,7 @@
    <tr><td>
 		<P ALIGN=center>
 		<APPLET CODE="g.class" WIDTH=800 HEIGHT=600>
-			<PARAM NAME  = "cache_archive" VALUE = "test.jar"/>
+			<PARAM NAME  = "cache_archive" VALUE = "10_seconds_of_thrust.jar"/>
 		</APPLET>
 		<br>
 		<font color="White">Left click to fire your rocket engines, 'r' to reset.<br>Try to get into orbit around the Moon and then back around the Earth.<br>You must remain in orbit for 10 seconds for each and you have 10 seconds worth of fuel.</font>
