--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@ This is a Java applet version of the game Mancala created for the <a href="http:
 This is another game I'm creating for the <a href="http://www.java4k.com" target="_blank">java4k</a> 2013 contest.
 <a href="http://www.java-gaming.org/topics/wip-codegolf4k/27766/view.html" target="_blank">Instructions and info.</a>
 <h2>
-<a href="./10_seconds_of_thrust.htm" target="_blank">10 Seconds of Thrust</a>
+<a href="10_seconds_of_thrust/10_seconds_of_thrust.htm" target="_blank">10 Seconds of Thrust</a>
 </h2>
 A simple game created for Ludum Dare 27. The aim is to get a spacecraft to the moon and back with limited thrust.
 <h2>Fractal stuff</h2>
