--- a/Gallery.htm
+++ b/Gallery.htm
@@ -1,94 +1,61 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
 <head>
-<style type="text/css">
-div.img
-  {
-  margin:2px;
-  border:1px solid #0000ff;
-  height:auto;
-  width:auto;
-  float:left;
-  text-align:center;
-  }
-div.img img
-  {
-  display:inline;
-  margin:3px;
-  border:1px solid #ffffff;
-  }
-div.img a:hover img
-  {
-  border:1px solid #0000ff;
-  }
-div.desc
-  {
-  text-align:center;
-  font-weight:normal;
-  width:120px;
-  margin:2px;
-  }
-</style>
+	<meta charset="utf-8">
+	<title>Fractal Gallery</title>
+	<link rel="stylesheet" href="css/lightbox.css" media="screen"/>
 </head>
 <body>
-<div class="img">
-  <a target="_blank" href="./fractals/desktop1_big.htm">
-  <img src="./fractals/desktop1_small.png" alt="1080p" width="110" height="90" />
-  </a>
-  <div class="desc">size: 1080p</div>
+
+<div class="wrapper">
+
+	<section id="examples" class="section examples-section">
+		<header>
+			<h2 class="section-header">Fractal Gallery</h2>
+		</header>
+		<h3>1920x1080 Images</h3>
+		<div class="image-row">
+			<a class="img" href="fractals/desktop1.png" data-lightbox="example-1"><img class="img" src="fractals/desktop1_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/desktop2.png" data-lightbox="example-1"><img class="img" src="fractals/desktop2_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/desktop3.png" data-lightbox="example-1"><img class="img" src="fractals/desktop3_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/desktop4.png" data-lightbox="example-1"><img class="img" src="fractals/desktop4_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/desktop5.png" data-lightbox="example-1"><img class="img" src="fractals/desktop5_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/desktop6.png" data-lightbox="example-1"><img class="img" src="fractals/desktop6_small.png" alt="thumb-1" width="110" height="90"/></a>
+		</div>
+		<h3>800x600 Images</h3>
+		<div class="image-row">
+		<a class="img" href="fractals/fractal1.png" data-lightbox="example-1"><img class="img" src="fractals/fractal1_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal2.png" data-lightbox="example-1"><img class="img" src="fractals/fractal2_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal3.png" data-lightbox="example-1"><img class="img" src="fractals/fractal3_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal4.png" data-lightbox="example-1"><img class="img" src="fractals/fractal4_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal5.png" data-lightbox="example-1"><img class="img" src="fractals/fractal5_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal6.png" data-lightbox="example-1"><img class="img" src="fractals/fractal6_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal7.png" data-lightbox="example-1"><img class="img" src="fractals/fractal7_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal8.png" data-lightbox="example-1"><img class="img" src="fractals/fractal8_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal9.png" data-lightbox="example-1"><img class="img" src="fractals/fractal9_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal10.png" data-lightbox="example-1"><img class="img" src="fractals/fractal10_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal11.png" data-lightbox="example-1"><img class="img" src="fractals/fractal11_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal12.png" data-lightbox="example-1"><img class="img" src="fractals/fractal12_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal13.png" data-lightbox="example-1"><img class="img" src="fractals/fractal13_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal14.png" data-lightbox="example-1"><img class="img" src="fractals/fractal14_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal15.png" data-lightbox="example-1"><img class="img" src="fractals/fractal15_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal16.png" data-lightbox="example-1"><img class="img" src="fractals/fractal16_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal17.png" data-lightbox="example-1"><img class="img" src="fractals/fractal17_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal18.png" data-lightbox="example-1"><img class="img" src="fractals/fractal18_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal19.png" data-lightbox="example-1"><img class="img" src="fractals/fractal19_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal20.png" data-lightbox="example-1"><img class="img" src="fractals/fractal20_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal21.png" data-lightbox="example-1"><img class="img" src="fractals/fractal21_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/fractal22.png" data-lightbox="example-1"><img class="img" src="fractals/fractal22_small.png" alt="thumb-1" width="110" height="90"/></a>
+		</div>
+	</section>
+
+	
+
+
+	<script src="js/jquery-1.10.2.min.js"></script>
+	<script src="js/lightbox-2.6.min.js"></script>
+
 </div>
-<div class="img">
-  <a target="_blank" href="./fractals/desktop2_big.htm">
-  <img src="./fractals/desktop2_small.png" alt="1080p" width="110" height="90" />
-  </a>
-  <div class="desc">size: 1080p</div>
-</div>
-<div class="img">
-  <a target="_blank" href="./fractals/desktop3_big.htm">
-  <img src="./fractals/desktop3_small.png" alt="1080p" width="110" height="90" />
-  </a>
-  <div class="desc">size: 1080p</div>
-</div>
-<div class="img">
-  <a target="_blank" href="./fractals/desktop4_big.htm">
-  <img src="./fractals/desktop4_small.png" alt="1080p" width="110" height="90" />
-  </a>
-  <div class="desc">size: 1080p</div>
-</div>
-<div class="img">
-  <a target="_blank" href="./fractals/desktop5_big.htm">
-  <img src="./fractals/desktop5_small.png" alt="1080p" width="110" height="90" />
-  </a>
-  <div class="desc">size: 1080p</div>
-</div>
-<div class="img">
-  <a target="_blank" href="./fractals/desktop6_big.htm">
-  <img src="./fractals/desktop6_small.png" alt="1080p" width="110" height="90" />
-  </a>
-  <div class="desc">size: 1080p</div>
-</div>
-<div class="img"><a target="_blank" href="./fractals/desktop7_big.htm"><img src="./fractals/desktop7_small.png" alt="1080p" width="110" height="90" /></a><div class="desc">size: 1080p</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal1.htm"><img src="./fractals/fractal1_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal2.htm"><img src="./fractals/fractal2_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal3.htm"><img src="./fractals/fractal3_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal4.htm"><img src="./fractals/fractal4_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal5.htm"><img src="./fractals/fractal5_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal6.htm"><img src="./fractals/fractal6_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal7.htm"><img src="./fractals/fractal7_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal8.htm"><img src="./fractals/fractal8_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal9.htm"><img src="./fractals/fractal9_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal10.htm"><img src="./fractals/fractal10_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal11.htm"><img src="./fractals/fractal11_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal12.htm"><img src="./fractals/fractal12_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal13.htm"><img src="./fractals/fractal13_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 800x600</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal14.htm"><img src="./fractals/fractal14_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal15.htm"><img src="./fractals/fractal15_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal16.htm"><img src="./fractals/fractal16_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal17.htm"><img src="./fractals/fractal17_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal18.htm"><img src="./fractals/fractal18_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal19.htm"><img src="./fractals/fractal19_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal20.htm"><img src="./fractals/fractal20_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal21.htm"><img src="./fractals/fractal21_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
-<div class="img"><a target="_blank" href="./fractals/fractal22.htm"><img src="./fractals/fractal22_small.png" alt="800x600" width="110" height="90" /></a><div class="desc">size: 1024x768</div></div>
 
 </body>
 </html>
