--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,8 @@ This is a site where I put links to stuff I have made.
 <h2>
 Processing.js Sketches
 </h2>
-<a href="./strange_attractor.htm" target="_blank">Strange Attractor</a>
+<a href="./strange_attractor.htm" target="_blank">Strange Attractor</a><br>
+<a href="./brownian_motion.htm" target="_blank">Brownian Motion</a><br>
 <br>
 <h2>
 <a href="http://www.java4k.com/index.php?action=games&method=view&gid=428" target="_blank">M4nkala</a>
@@ -16,25 +17,25 @@ Processing.js Sketches
 This is a Java applet version of the game Mancala created for the <a href="http://www.java4k.com" target="_blank">java4k</a> 2013 contest.<br>
 <a href="./M4nkala/Instructions.htm" target="_blank">Instructions</a><br>
 <a href="./M4nkala.htm" target="_blank">M4nkala hosted on this website</a><br>
-<a href="./oldMancala.htm" target="_blank">old version</a>
+<a href="./oldMancala.htm" target="_blank">old version</a><br>
 <br>
 <h2>
 <a href="http://www.java4k.com/index.php?action=games&method=view&gid=466" target="_blank">CodeGolf4k</a>
 </h2>
 This is another game I created for the <a href="http://www.java4k.com" target="_blank">java4k</a> 2013 contest.
-<a href="http://www.java-gaming.org/topics/wip-codegolf4k/27766/view.html" target="_blank">JGO forum thread.</a>
+<a href="http://www.java-gaming.org/topics/wip-codegolf4k/27766/view.html" target="_blank">JGO forum thread.</a><br>
 <br>
 <h2>
 <a href="10_seconds_of_thrust/10_seconds_of_thrust.htm" target="_blank">10 Seconds of Thrust</a>
 </h2>
-A simple game created for Ludum Dare 27. The aim is to get a spacecraft to the moon and back with limited thrust.
+A simple game created for Ludum Dare 27. The aim is to get a spacecraft to the moon and back with limited thrust.<br>
 <br>
 <h2>Fractal stuff</h2>
 <a href="http://www.youtube.com/watch?v=WA3Zhlx5FPw" target="_blank">Fractal zooming video</a><br>
 <a href="./Gallery.htm" target="_blank">Fractal image gallery</a><br>
 <br>
 <a href="./FractalGen.zip" target="_blank">Fractal Generator Program</a><br>
-<a href="./FractalGenInstructions.htm" target="_blank">Fractal Generator Instructions</a>
+<a href="./FractalGenInstructions.htm" target="_blank">Fractal Generator Instructions</a><br>
 <br>
 <h2>Music</h2>
 Created using <a href="http://www.drpetter.se/project_musagi.htm" target="_blank">Musagi</a>:<br>
