added year clock sketch

--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@ Processing.js Sketches
 </h2>
 <a href="./strange_attractor.htm" target="_blank">Strange Attractor</a><br>
 <a href="./brownian_motion.htm" target="_blank">Brownian Motion</a><br>
+<a href="./year_clock.htm" target="_blank">Year Clock</a><br>
 <br>
 <h2>
 <a href="http://www.java4k.com/index.php?action=games&method=view&gid=428" target="_blank">M4nkala</a>
