--- a/strange_attractor.htm
+++ b/strange_attractor.htm
@@ -95,9 +95,13 @@ class Par {
 
 </script>
 </head>
-<body>
-  <h1>A "Strange Attractor"</h1>
-  <p>Created with <a href= "http://processingjs.org/" target="_blank">Processing.js</a></p>
-  <canvas id="pjs"></canvas>
+<body bgcolor="#101010">
+  <table width="100%" height="100%" align="center" valign="center">
+   <tr><td>
+		<P ALIGN=center>
+		  <canvas id="pjs"></canvas>
+		</P>
+   </td></tr>
+   </table>
 </body>
 </html>
