--- a/recoil.htm
+++ b/recoil.htm
@@ -28,7 +28,7 @@ void draw(){
   v+=-k*x;
   v*=d;
   stroke(1,1,1,1);
-  point(w/2+x,50);
+  point(w/2,100 - x);
   float angle = -x*0.005;//angleFactor = 0.005
   float move = -x*0.5;//moveFactor = 0.5
   int gunLength = 100;
