--- a/Gallery.htm
+++ b/Gallery.htm
@@ -21,6 +21,7 @@
 <a class="img" href="fractals/desktop4.png" data-lightbox="example-1"><img class="img" src="fractals/desktop4_small.png" alt="thumb-1" width="110" height="90"/></a>
 <a class="img" href="fractals/desktop5.png" data-lightbox="example-1"><img class="img" src="fractals/desktop5_small.png" alt="thumb-1" width="110" height="90"/></a>
 <a class="img" href="fractals/desktop6.png" data-lightbox="example-1"><img class="img" src="fractals/desktop6_small.png" alt="thumb-1" width="110" height="90"/></a>
+<a class="img" href="fractals/desktop8.png" data-lightbox="example-1"><img class="img" src="fractals/desktop8_small.png" alt="thumb-1" width="110" height="90"/></a>
 		</div>
 		<h3>800x600 Images</h3>
 		<div class="image-row">
