added Sierpinski triangle

--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,7 @@ Processing.js Sketches
 <a href="./year_clock.htm" target="_blank">Year Clock</a><br>
 <a href="./recoil.htm" target="_blank">Gun Recoil Test</a><br>
 <a href="./fireworks.htm" target="_blank">Fireworks</a><br>
+<a href="./sierpinski_triangle.htm" target="_blank">Sierpinski Triangle</a><br>
 <br>
 <h2>
 <a href="http://www.java4k.com/index.php?action=games&method=view&gid=428" target="_blank">M4nkala</a>
