--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,8 @@ Processing.js Sketches
 <a href="./strange_attractor.htm" target="_blank">Strange Attractor</a><br>
 <a href="./brownian_motion.htm" target="_blank">Brownian Motion</a><br>
 <a href="./year_clock.htm" target="_blank">Year Clock</a><br>
-<a href="./recoil.htm" target="_blank">Gun Recoil Test</a><br>
+<a href="./recoil.htm" target="_blank">Simple Gun Recoil Simulation</a><br>
+<a href="./helicopter.htm" target="_blank">Simple 2D Helicopter Simulation</a><br>
 <a href="./fireworks.htm" target="_blank">Fireworks</a><br>
 <a href="./sierpinski_triangle.htm" target="_blank">Sierpinski Triangle</a><br>
 <br>
