--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@ Processing.js Sketches
 <a href="./recoil.htm" target="_blank">Simple Gun Recoil Simulation</a><br>
 <a href="./helicopter.htm" target="_blank">Simple 2D Helicopter Simulation</a><br>
 <a href="./fireworks.htm" target="_blank">Fireworks</a><br>
-<a href="./fireworks_text.htm" target="_blank">Firework Message (can be easily customized for any message)</a><br>
+<a href="./fireworks_text.htm" target="_blank">Firework Message</a> (can be easily customized for any message, click to run again)<br>
 <a href="./sierpinski_triangle.htm" target="_blank">Sierpinski Triangle</a><br>
 <br>
 <h2>
