--- a/fireworks_text.htm
+++ b/fireworks_text.htm
@@ -404,6 +404,7 @@ void sline(float x0, float y0, float x1, float y1, float size) {
    <tr><td>
 		<P ALIGN=center>
 		  <canvas id="pjs"></canvas>
+		  <br><font color="#0F0F0F">Click to Run Again</font>
 		</P>
    </td></tr>
    </table>
