add hex game from https://ide.c9.io/kramin42/demo-project

--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,11 @@ Welcome!
 This is a site where I put links to stuff I have made.
 <br>
 <h2>
+JS Games
+</h2>
+<a href="./hexgame.htm" target="_blank">Hex Game</a><br>
+<br>
+<h2>
 Processing.js Sketches
 </h2>
 <a href="./strange_attractor.htm" target="_blank">Strange Attractor</a><br>
