add image for hexgame

--- a/hexgame.htm
+++ b/hexgame.htm
@@ -22,7 +22,7 @@
 <canvas id="myCanvas" width="400" height="400"></canvas>
 
 <p>Try to get it to look like this:</p>
-<img src="example.png" width="200"></img>
+<img src="img/hexgame.png" width="200"></img>
 
 <script>
 
