add juggling game

--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@ This is a site where I put links to stuff I have made.
 <h2>
 JS Games
 </h2>
+<a href="./juggle/Juggle2D.html" target="_blank">Juggling Game</a><br>
 <a href="./hexgame.htm" target="_blank">Hex Game</a><br>
 <br>
 <h2>
